--- a/views/cleDev.handlebars
+++ b/views/cleDev.handlebars
@@ -226,7 +226,7 @@
                                                 <form class='modal-form'>
                                                     <div class="form-group">
                                                         <label for="dateEntered_id">Date Entered</label>
-                                                        <input type="date" class="form-control" id="dateEntered_id" name="dateEntered">
+                                                        <input type="date" class="form-control" id="dateEntered_id" name="entered">
                                                     </div>
                                                     <div class="form-group">
                                                         <label for="owner_id">Owner</label>
