--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -82,127 +82,10 @@ $().ready(function() {
 });
 </script>
 <!-- BOOTSTRAP TABLE -->
-<script type="text/javascript">
-var $table = $('#bootstrap-table');
+<script src="/assets/js/bootstraptable.js"></script>
+<!-- <script type="text/javascript">
 
-function operateFormatter(value, row, index) {
-    return [
-        // '<a rel="tooltip" title="View" class="btn btn-simple btn-info btn-icon table-action view" href="javascript:void(0)">',
-        // '<i class="fa fa-image"></i>',
-        // '</a>',
-        '<a rel="tooltip" title="Edit" class="btn btn-simple btn-warning btn-icon table-action edit" href="javascript:void(0)">',
-        '<i class="fa fa-edit"></i>',
-        '</a>',
-        '<a rel="tooltip" title="Remove" class="btn btn-simple btn-danger btn-icon table-action remove" href="javascript:void(0)">',
-        '<i class="fa fa-remove"></i>',
-        '</a>'
-    ].join('');
-}
-
-$().ready(function() {
-
-    $('.table-action.edit').on('click', function() {
-
-    })
-
-    window.operateEvents = {
-        // 'click .view': function(e, value, row, index) {
-        //     info = JSON.stringify(row);
-
-        //     swal('You click view icon, row: ', info);
-        //     console.log(info);
-        // },
-        'click .edit': function(e, value, row, index) {
-            info = JSON.stringify(row);
-
-            // SAVE TENANT ID FROM
-            var thisId = row.id;
-
-            // FIND TENANT INFO FROM ROW
-            $.ajax({
-                    method: "GET",
-                    url: "/api/tenants/" + thisId
-                })
-                // Fill modal with tenant info
-                .done(function(data) {
-                    console.log(data);
-                    data = data[0];
-                    $('#modal--create').modal({
-                        show: 'true'
-                    });
-                    $("#id").val(data.id);
-                    $("#tenantName").val(data.tenantName);
-                    $("#tenantSF").val(data.tenantSF);
-                    $("#leaseStart").val(data.leaseStart);
-                    $("#leaseEnd").val(data.leaseEnd);
-                    $("#basePSF").val(data.basePSF);
-                    $("#camPSF").val(data.camPSF);
-                    $("#salesPSF").val(data.salesPSF);
-                    $("#occupancy").val(data.occupancy);
-                    $("#noticeDate").val(data.noticeDate);
-                    $("#noticeRent").val(data.noticeRent);
-                })
-
-        },
-        'click .remove': function(e, value, row, index) {
-
-            console.log(row);
-            console.log(row.id);
-
-            // Save the id from the p tag
-            var thisId = row.id;
-
-
-            // FIND TENANT INFO FROM ROW
-            $.ajax({
-                    method: "DELETE",
-                    url: "/api/remove/" + thisId
-                })
-                // Fill modal with tenant info
-                .done(function(data) {
-                    location.reload();
-                })
-        }
-    };
-
-    $table.bootstrapTable({
-        toolbar: ".toolbar",
-        clickToSelect: true,
-        showRefresh: true,
-        search: true,
-        showToggle: true,
-        showColumns: true,
-        pagination: true,
-        searchAlign: 'left',
-        pageSize: 8,
-        clickToSelect: false,
-        pageList: [8, 10, 25, 50, 100],
-
-        formatShowingRows: function(pageFrom, pageTo, totalRows) {
-            //do nothing here, we don't want to show the text "showing x of y from..."
-        },
-        formatRecordsPerPage: function(pageNumber) {
-            return pageNumber + " rows visible";
-        },
-        icons: {
-            refresh: 'fa fa-refresh',
-            toggle: 'fa fa-th-list',
-            columns: 'fa fa-columns',
-            detailOpen: 'fa fa-plus-circle',
-            detailClose: 'fa fa-minus-circle'
-        }
-    });
-
-    //activate the tooltips after the data table is initialized
-    $('[rel="tooltip"]').tooltip();
-
-    $(window).resize(function() {
-        $table.bootstrapTable('resetView');
-    });
-
-
-});
-</script>
+</script> -->
 <!-- FIND TOTAL, OCCUPIED, VACANT SF ON TABLES -->
 <!-- <script type="text/javascript">
 app.initFindOccupancy();
