--- a/views/cleDev.handlebars
+++ b/views/cleDev.handlebars
@@ -143,7 +143,7 @@
                                             <td class="owner">{{owner}}</td>
                                             <td class="numUnits">{{numUnits}}</td>
                                             <td class="salePrice">{{salePrice}}</td>
-                                            <td class="notes">{{notes}}</td>
+                                            <td class="notes notes-Td-css">{{notes}}</td>
                                         </tr>
                                         {{/each}}
                                     </tbody>
