--- a/views/leaseComps.handlebars
+++ b/views/leaseComps.handlebars
@@ -159,7 +159,7 @@
                                             <td class="oneBedRent">{{oneBedRent}}</td>
                                             <td class="twoBedRent">{{twoBedRent}}</td>
                                             <td class="threeBedRent">{{threeBedRent}}</td>
-                                            <td class="notes">{{notes}}</td>
+                                            <td class="notes notes-Td-css">{{notes}}</td>
                                         </tr>
                                         {{/each}}
                                     </tbody>
