--- a/views/fipDev.handlebars
+++ b/views/fipDev.handlebars
@@ -144,7 +144,7 @@
                                             <td class="owner">{{owner}}</td>
                                             <td class="numUnits">{{number numUnits}}</td>
                                             <td class="salePrice">{{number salePrice}}</td>
-                                            <td class="notes">{{notes}}</td>
+                                            <td class="notes notes-Td-css" >{{notes}}</td>
                                         </tr>
                                         {{/each}}
                                     </tbody>
