leasecomps modal working

--- a/views/cleDev.handlebars
+++ b/views/cleDev.handlebars
@@ -185,6 +185,7 @@
                                                 <div class="panel-body">
                                                     <form class="create-update-form" action="/api/newCleSite" method="POST">
                                                         <input type="hidden" name="id" id="id" />
+                                                        <input type="hidden" name="dbCle" id="dbCle" />
                                                         <div class="form-group">
                                                             <label for="siteName">Site</label>
                                                             <input type="text" class="form-control" id="siteName" name="siteName" placeholder="Site Name">
