--- a/views/fipDev.handlebars
+++ b/views/fipDev.handlebars
@@ -186,6 +186,7 @@
                                                     <div class="panel-body">
                                                         <!-- hidden tenant id if available -->
                                                         <input type="hidden" name="id" id="id" />
+                                                        <input type="hidden" name="dbFip" id="dbFip" />
                                                         <div class="form-group">
                                                             <label for="siteName">Site</label>
                                                             <input type="text" class="form-control" id="siteName" name="siteName" placeholder="Site Name">
