--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -58,6 +58,7 @@
 <!-- Light Bootstrap Dashboard DEMO methods, don't include it in your project! -->
 <script src="/assets/js/addfip.js"></script>
 <script src="/assets/js/addcle.js"></script>
+<script src="/assets/js/addcomp.js"></script>
 <script src="/assets/js/demo.js"></script>
 <script src="/assets/js/app.js"></script>
 <script src="/assets/js/newTenant.js"></script>
