--- a/views/leaseComps.handlebars
+++ b/views/leaseComps.handlebars
@@ -138,7 +138,7 @@
                                         <th data-field="oneBedRent" data-sortable="true">1-Bed Avg. Rent</th>
                                         <th data-field="twoBedRent" data-sortable="true">2-Bed Avg. Rent</th>
                                         <th data-field="threeBedRent" data-sortable="true">3-Bed Avg. Rent</th>
-                                        <th data-field="notes" data-sortable="true">Notes</th>                                       
+                                        <th data-field="notes" data-sortable="true">Notes</th>
                                         <th data-field="actions" class="td-actions text-right" data-events="operateEvents" data-formatter="operateFormatter">Actions</th>
                                     </thead>
                                     <tbody>
@@ -243,13 +243,13 @@
                                                         <div class="col-md-6">
                                                             <div class="form-group">
                                                                 <label for="entered">Date Entered</label>
-                                                                <input type="date" class="form-control" id="entered" name="entered">
+                                                                <input type="text" class="form-control datepicker" id="entered" name="entered" placeholder="Date Entered" />
                                                             </div>
                                                         </div>
                                                         <div class="col-md-6">
                                                             <div class="form-group">
                                                                 <label for="sold">Date Sold</label>
-                                                                <input type="date" class="form-control" id="sold" name="sold">
+                                                                <input type="text" class="form-control datepicker" id="sold" name="sold" placeholder="Date Sold" />
                                                             </div>
                                                         </div>
                                                     </div>
