--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,8 +60,6 @@
 <script src="/assets/js/addcle.js"></script>
 <script src="/assets/js/addcomp.js"></script>
 <script src="/assets/js/demo.js"></script>
-<script src="/assets/js/app.js"></script>
-<script src="/assets/js/newTenant.js"></script>
 <!-- BACKGROUND IMAGE -->
 <script type="text/javascript">
 $().ready(function() {
@@ -85,18 +83,12 @@ $().ready(function() {
 </script>
 <!-- BOOTSTRAP TABLE -->
 <script src="/assets/js/bootstraptable.js"></script>
-<!-- <script type="text/javascript">
 
-</script> -->
-<!-- FIND TOTAL, OCCUPIED, VACANT SF ON TABLES -->
-<!-- <script type="text/javascript">
-app.initFindOccupancy();
-</script>
-LOAD GOOGLE MAP
+<!-- LOAD GOOGLE MAP -->
 <script>
 $().ready(function() {
     demo.initFullScreenGoogleMap();
 });
-</script> -->
+</script>
 
 </html>
