--- a/views/compsmap.handlebars
+++ b/views/compsmap.handlebars
@@ -94,11 +94,12 @@
                     <a class="navbar-brand" href="#">Lease Comparables Map</a>
                 </div>
                 <div class="collapse navbar-collapse">
-                    <li>
-                        <a href="/logout" class="btn btn-wd btn-danger">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="/logout" class="btn btn-wd btn-danger">
                                         Log out
                                     </a>
-                    </li>
+                        </li>
                     </ul>
                 </div>
             </div>
