removed dashboard from nav

--- a/views/allmap.handlebars
+++ b/views/allmap.handlebars
@@ -85,7 +85,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">FIP Development Map</a>
+                    <a class="navbar-brand" href="#">Cleveland and FIP Map</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
