--- a/views/cleDev.handlebars
+++ b/views/cleDev.handlebars
@@ -19,12 +19,6 @@
             <div class="sidebar-wrapper">
                 <!-- NAVBAR -->
                 <ul class="nav">
-                    <li class="active">
-                        <a href="/dashboard">
-                        <i class="pe-7s-graph"></i>
-                        <p>Dashboard</p>
-                    </a>
-                    </li>
                     <!-- DATABASES -->
                     <li>
                         <a data-toggle="collapse" href="#componentsExamples">
@@ -118,8 +112,8 @@
                                 </div>
                                 <table id="bootstrap-table" class="table table-striped bootstrap-table">
                                     <thead>
-                                        <th data-field="id" class="text-center">ID</th>
-                                        <th data-field="siteName" class="text-center" data-sortable="true">Site</th>
+                                        <th data-field="id" class="text-center" data-visible="false">ID</th>
+                                        <th data-field="siteName" class="text-left" data-sortable="true">Site</th>
                                         <th data-field="siteAddress" data-sortable="true">Address</th>
                                         <th data-field="dateEntered" data-sortable="true">Date Entered</th>
                                         <th data-field="owner" data-sortable="true">Owner</th>
