--- a/views/leaseComps.handlebars
+++ b/views/leaseComps.handlebars
@@ -19,12 +19,6 @@
             <div class="sidebar-wrapper">
                 <!-- NAVBAR -->
                 <ul class="nav">
-                    <li class="active">
-                        <a href="/dashboard">
-                        <i class="pe-7s-graph"></i>
-                        <p>Dashboard</p>
-                    </a>
-                    </li>
                     <!-- DATABASES -->
                     <li>
                         <a data-toggle="collapse" href="#componentsExamples">
@@ -119,7 +113,7 @@
                                 </div>
                                 <table id="bootstrap-table" class="table table-striped">
                                     <thead>
-                                        <th data-field="id" class="text-center">ID</th>
+                                        <th data-field="id" class="text-center" data-visible="false">ID</th>
                                         <th data-field="siteName" class="text-left" data-sortable="true">Site</th>
                                         <th data-field="siteAddress" data-sortable="true">Address</th>
                                         <th data-field="entered" data-sortable="true">Date Entered</th>
