--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,6 +47,7 @@
 <script src="/assets/js/jquery-jvectormap.js"></script>
 <!--  Google Maps Plugin    -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHjFjooAs1h0hZBGxthjWqG5HlMgkCxOI"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiG066IdOONTHds1eWDsHi_ba-wozCzuI&libraries=places"></script>
 <!-- Wizard Plugin    -->
 <script src="/assets/js/jquery.bootstrap.wizard.min.js"></script>
 <!--  Datatable Plugin    -->
