fip and cle new forms with autocomplete

--- a/public/assets/css/demo.css
+++ b/public/assets/css/demo.css
@@ -13,6 +13,10 @@
     }   
 }
 
+.pac-container {
+    z-index: 1051 !important;
+}
+
 .notes-Td-css {
     max-width: 100px;
     overflow: hidden;
