--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,6 +29,7 @@
 <script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
 <!--  Forms Validations Plugin -->
 <script src="/assets/js/jquery.validate.min.js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBagq1uMQOv2BS_msnulWdxuw9Al0WaG9Q&libraries=places&language=en" type="text/javascript" ></script> 
 <!--  Plugin for Date Time Picker and Full Calendar Plugin-->
 <script src="/assets/js/moment.min.js"></script>
 <!--  Date Time Picker Plugin is included in this js file -->
@@ -46,8 +47,8 @@
 <!-- Vector Map plugin -->
 <script src="/assets/js/jquery-jvectormap.js"></script>
 <!--  Google Maps Plugin    -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHjFjooAs1h0hZBGxthjWqG5HlMgkCxOI"></script>
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBiG066IdOONTHds1eWDsHi_ba-wozCzuI&libraries=places"></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHjFjooAs1h0hZBGxthjWqG5HlMgkCxOI"></script> -->
+
 <!-- Wizard Plugin    -->
 <script src="/assets/js/jquery.bootstrap.wizard.min.js"></script>
 <!--  Datatable Plugin    -->
@@ -60,6 +61,7 @@
 <script src="/assets/js/addfip.js"></script>
 <script src="/assets/js/addcle.js"></script>
 <script src="/assets/js/addcomp.js"></script>
+<script src="/assets/js/autocomplete.js"></script>
 <script src="/assets/js/demo.js"></script>
 <!-- BACKGROUND IMAGE -->
 <script type="text/javascript">
