--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
 <script src="/assets/js/bootstrap.min.js" type="text/javascript"></script>
 <!--  Forms Validations Plugin -->
 <script src="/assets/js/jquery.validate.min.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBagq1uMQOv2BS_msnulWdxuw9Al0WaG9Q&libraries=places&language=en" type="text/javascript" ></script> 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBagq1uMQOv2BS_msnulWdxuw9Al0WaG9Q&libraries=places&language=en" type="text/javascript" ></script> 
 <!--  Plugin for Date Time Picker and Full Calendar Plugin-->
 <script src="/assets/js/moment.min.js"></script>
 <!--  Date Time Picker Plugin is included in this js file -->
